actualizacion_card_edit

--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,4 @@
 /* You can add global styles to this file, and also import other style files */
+body{
+background-image: url(https://previews.123rf.com/images/vkulieva/vkulieva1602/vkulieva160200007/52452427-patr%C3%B3n-sin-fisuras-para-lista-de-tareas-fondo-universales.jpg);
+}
