--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -9,7 +9,7 @@
         <div class="card-body">
             <form [formGroup]="form" (ngSubmit)="ingresar()" >
                 <div class="text-center">
-                    <h4>Login</h4>
+                    <h4>Account Login</h4>
                 </div>
                 <div class="form-group">
                     <label for="exampleInputEmail1" class="form-label mt-2">Email address</label>
@@ -21,7 +21,7 @@
                   </div>
 <br>
 
-                  <button class="btn btn-success btn-block" type="submit">Ingresar</button>
+                  <button class="btn btn-success btn-block" type="submit">Log In</button>
                   
       
             </form>
