--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -7,7 +7,7 @@
 <div class="card-centrada">
     <div class="card">
         <div class="card-body">
-            <form [formGroup]="form" (ngSubmit)="ingresar()" >
+            <form [formGroup]="form" (ngSubmit)="login()" >
                 <div class="text-center">
                     <h4>Account Login</h4>
                 </div>
