--- a/src/app/components/create-folder/create-folder.component.html
+++ b/src/app/components/create-folder/create-folder.component.html
@@ -1,3 +1,9 @@
+    
+    
+<div *ngIf="message" class="alert alert-dismissible alert-danger">
+    <strong>The input folder is empty</strong>  
+  </div>
+
     <div class="row">
        
         <div class="col-lg-10">       
