--- a/src/app/components/create-task/create-task.component.html
+++ b/src/app/components/create-task/create-task.component.html
@@ -1,4 +1,9 @@
 
+
+<div *ngIf="message" class="alert alert-dismissible alert-danger">
+    <strong>The input task is empty</strong>  
+  </div>
+
     <div class="row">
        
         <div class="col-lg-10">       
